fixed menu no longer overlaps admin bar

--- a/scss/site/_navigation.scss
+++ b/scss/site/_navigation.scss
@@ -234,7 +234,6 @@
 
 		}
 	}
-
 	@media screen and ( min-width: 600px ) and ( max-width: 960px ) {
 		.use-title-for-small a {
 			overflow: hidden;
@@ -246,6 +245,14 @@
 				width: 100%;
 				text-align: center;
 			}
+		}
+	}
+	.logged-in & {
+		@media screen and ( max-width: 782px ) {
+			top: 42px;
+		}
+		@media screen and ( min-width: 783px ) {
+			top: 32px;
 		}
 	}
 }
